# spherepix

./: CMakeLists.txt  LICENSE  README.md
include/spherepix/: arithmetic.h  camera.h  empty_delete.h  geometry.h  image.h  image_impl.h  pixelation.h  pixelation_impl.h  springdynamics.h
include/spherepix/gpu/: camera.h  math.h  pixelation.h  pyramid.h  util.h
include/spherepix/gpu/device/: camera_k.h  geometry_k.h  math_k.h  pixelation_k.h  pyramid_k.h  util_k.h
python/: .gitignore  setup.py
python/spherepix/: __init__.py  blending.py  camera.pxd  camera.pyx  eigen.pxd  eigen.pyx  geometry.pxd  geometry.pyx  image.pxd  image.pyx  pixelation.pxd  pixelation.pyx  quaternion.py  springdynamics.pxd  springdynamics.pyx
python/spherepix/gpu/: camera.pxd  camera.pyx  pixelation.pxd  pixelation.pyx  pyramid.pxd  pyramid.pyx
python/spherepix/plot/: plot.py
src/: CMakeLists.txt  arithmetic.cpp  camera.cpp  checkboard.cpp  geometry.cpp  image.cpp  pixelation.cpp  springdynamics.cpp
src/gpu/: CMakeLists.txt  camera.cu  pixelation.cu  pyramid.cu  util.cu
src/gpu/device/: CMakeLists.txt  util_k.cu
test/: main.cpp
